--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ app_env="development"
 server_address="localhost"
 port="3306"
 user="root"
-password=""
+password="20050613"
 dbname="gin_jwt_gorm"
 ACCESS_TOKEN_EXPIRY_HOUR=""
 REFRESH_TOKEN_EXPIRY_HOUR=""
